Align annotations correctly
This style formatting is temporary, but it makes the annotations
presentable for the time being.

--- a/src/assets/styling.css
+++ b/src/assets/styling.css
@@ -92,8 +92,16 @@ hr {
   text-align: justify;
 }
 
-.annotation {
+#annotation-section {
     white-space: break-spaces;
+    max-width: 100%;
+    width: max-content;
+    text-align: left;
+    margin: auto;
+}
+
+#move-list {
+    max-width: 400px;
 }
 
 #gameSelectionList {
@@ -101,6 +109,10 @@ hr {
 }
 
 @media(max-width: 600px ), (max-height: 600px) {
+
+  #move-list {
+      max-width: min(90vh, 90vw);
+  }
 
   .cg-board-wrap {
       width: min(90vh, 90vw);
